Pandas Introduction cambio

--- a/PANDAS/pandas_introduction.ipynb
+++ b/PANDAS/pandas_introduction.ipynb
@@ -506,7 +506,9 @@
    "cell_type": "code",
    "execution_count": 17,
    "id": "95cc3dce-290d-4ae5-9b13-4a11064899d6",
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -692,12 +694,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "455130ea-bed1-4f3f-9078-0129bb2e267a",
+   "cell_type": "markdown",
+   "id": "8dfb870d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## "
+   ]
   }
  ],
  "metadata": {
